--- a/index.html
+++ b/index.html
@@ -71,51 +71,53 @@
     <div class="overlay d-none" id="overlay"></div>
 
     <main>
-      <header class="main-new">
+      <header class="main-news">
         <img
           src="./assets/images/image-web-3-mobile.jpg"
           alt="geometric pieces"
         />
 
-        <h1>The Bright <br />Future of Web <br />3.0?</h1>
+        <div class="main-new__info">
+          <h1>The Bright <br />Future of Web <br />3.0?</h1>
 
-        <p>
-          We dive into the next evolution of the web that claims to put the
-          power of the platforms back into the hands of the people. But is it
-          really fulfilling its promise?
-        </p>
+          <p>
+            We dive into the next evolution of the web that claims to put the
+            power of the platforms back into the hands of the people. But is it
+            really fulfilling its promise?
+          </p>
 
-        <button>Read More</button>
+          <button>Read More</button>
+        </div>
+
+        <!-- News Aside Bar -->
+        <aside class="newsbar">
+          <h2>New</h2>
+
+          <article class="newsbar__new">
+            <h3>Hydrogen VS Electric Cars</h3>
+
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </article>
+
+          <article class="newsbar__new">
+            <h3>The Downsides of AI Artistry</h3>
+
+            <p>
+              What are the possible adverse effects of on-demand AI image
+              generation?
+            </p>
+          </article>
+
+          <article class="newsbar__new">
+            <h3>Is VC Funding Drying Up?</h3>
+
+            <p>
+              Private funding by VC firms is down 50% YOY. We take a look at
+              what that means.
+            </p>
+          </article>
+        </aside>
       </header>
-
-      <!-- News Aside Bar -->
-      <aside class="newsbar">
-        <h2>New</h2>
-
-        <article class="newsbar__new">
-          <h3>Hydrogen VS Electric Cars</h3>
-
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </article>
-
-        <article class="newsbar__new">
-          <h3>The Downsides of AI Artistry</h3>
-
-          <p>
-            What are the possible adverse effects of on-demand AI image
-            generation?
-          </p>
-        </article>
-
-        <article class="newsbar__new">
-          <h3>Is VC Funding Drying Up?</h3>
-
-          <p>
-            Private funding by VC firms is down 50% YOY. We take a look at what
-            that means.
-          </p>
-        </article>
-      </aside>
 
       <!-- Secondary News -->
       <section class="secondary-news">
