--- a/index.html
+++ b/index.html
@@ -72,21 +72,25 @@
 
     <main>
       <header class="main-news">
-        <img
-          src="./assets/images/image-web-3-mobile.jpg"
-          alt="geometric pieces"
-        />
+        <div class="main-news__container">
+          <img
+            src="./assets/images/image-web-3-mobile.jpg"
+            alt="geometric pieces"
+          />
 
-        <div class="main-new__info">
-          <h1>The Bright <br />Future of Web <br />3.0?</h1>
+          <div class="main-news__information">
+            <h1>The Bright Future of Web 3.0?</h1>
 
-          <p>
-            We dive into the next evolution of the web that claims to put the
-            power of the platforms back into the hands of the people. But is it
-            really fulfilling its promise?
-          </p>
+            <div class="information__description">
+              <p>
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </p>
 
-          <button>Read More</button>
+              <button>Read More</button>
+            </div>
+          </div>
         </div>
 
         <!-- News Aside Bar -->
@@ -170,7 +174,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/ClaxBitt">ClaxBitt</a>.
     </div>
   </body>
 </html>
